--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/fecf12a8da.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header>
+    <header id="header">
         <div id="navbar">
             <img src="./memojis/memojiGreet.png" alt="" id="logo">
             <div id="iconBg">
@@ -132,8 +132,13 @@
                 <h2>My Latest Projects</h2>
                 <div class="borderDiv"></div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est esse ex ipsum officia tenetur dolorum sit, enim explicabo modi eveniet.</p>
+
                 <div id="projectsOnlyDiv">
-                    <div class="gradientBorderDiv">
+                    <div class="gradientBorderDiv2" id="projectPlaceholder">
+                        <div class="project2">
+                        </div>
+                    </div>
+                    <div class="gradientBorderDiv" id="gradientId1">
                         <div class="project" id="project1">
                             <div class="projectTitle imgCenter">
                                 <h3 class="projectHeading">Product Page</h3>
@@ -154,7 +159,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="gradientBorderDiv">
+                    <div class="gradientBorderDiv" id="gradientId2">
                     <div class="project" id="project2">
                             <div class="projectTitle imgCenter">
                                 <h3 class="projectHeading">Newsletter Sign-up</h3>
@@ -175,7 +180,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="gradientBorderDiv">
+                    <div class="gradientBorderDiv" id="gradientId3">
                         <div class="project" id="project3">
                             <div class="projectTitle imgCenter">
                                 <h3 class="projectHeading">Grid Information</h3>
@@ -197,6 +202,7 @@
                         </div>
                     </div>
                 </div>
+
                 <div id="projectControls">
                     <i class="fa-solid fa-circle-arrow-left" id="leftProjectArr"></i>
                     <i class="fa-solid fa-circle-arrow-right" id="rightProjectArr"></i>
@@ -204,38 +210,26 @@
             </div>
         </section>
 
-        <section class="contactSec">
+        <section id="contactSec">
             <div class="containerDiv">
                 <h2>Contact Me</h2>
                 <div class="borderDiv"></div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse qui quis nam. Quae sed quasi consequuntur debitis, quisquam voluptatem dolores.</p>
                 <form action="">
-                    <label for="name">Name:</label>
-                    <input type="text" name="name" id="name">
-                    <label for="email">E-Mail-Adress:</label>
-                    <input type="email" name="email" id="email">
-                    <label for="subject">Subject:</label>
-                    <input type="text" name="subject" id="subject">
-                    <label for="message">Your Message:</label>
-                    <textarea name="message" id="message" cols="40" rows="10"></textarea>
-                    <input type="submit" value="SEND">
+                    <label for="name">Name:</label><br>
+                    <input type="text" name="name" id="name" placeholder="Your Name"><br>
+                    <label for="email">E-Mail-Adress:</label><br>
+                    <input type="email" name="email" id="email" placeholder="Your E-Mail-Adress"><br>
+                    <label for="subject">Subject:</label><br>
+                    <input type="text" name="subject" id="subject" placeholder="Subject"><br>
+                    <label for="message">Your Message:</label><br>
+                    <textarea name="message" id="message" cols="40" rows="10" placeholder="Your Message"></textarea><br>
+                    <input type="submit" value="SUBMIT" id="submit">
                 </form>
-                <div class="containerDiv">
-        </section>
-
-        <section id="fastContactSec">
-            <div class="containerDiv">
-                <div>
-                    <img src="./memojis/memojiIdea.png" id="ideaMemoji">
-                </div>
-                <img src="./waves/wave-5.svg" alt="">
-                <div>
-                    <h2>You prefere Whatsapp over Email?</h2>
-                    <h3>Text me on whatsapp 👇</h3>
-                    <button>Open Whatsapp Chat</button>
-                </div>
             </div>
         </section>
+        <img src="./waves/wave-5.svg" alt="" id="waves2">
+
 
     </main>
 
