finish html and css for mobile version.

--- a/index.html
+++ b/index.html
@@ -212,7 +212,8 @@
                 <h2>Contact Me</h2>
                 <div class="borderDiv"></div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse qui quis nam. Quae sed quasi consequuntur debitis, quisquam voluptatem dolores.</p>
-                <form action="">
+                <form action="https://formspree.io/f/xgebkyrr"
+                method="POST">
                     <label for="name">Name:</label><br>
                     <input type="text" name="name" id="name" placeholder="Your Name"><br>
                     <label for="email">E-Mail-Adress:</label><br>
@@ -225,15 +226,15 @@
                 </form>
             </div>
         </section>
-        <img src="./waves/wave-5.svg" alt="" id="waves2">
+        
 
 
     </main>
-
+    <img src="./waves/wave-5.svg" alt="" id="waves2">
+    
     <footer>
-        <img src="./memojis/memojiGreet.png" alt="">
-        <hr>
-        <a href="#">Privacy policy</a> | <a href="#">Terms of service</a>
+        <img src="./memojis/memojiGreet.png" alt="" id="greetMemoji">
+        <div id="hr"></div>
         <p>&copy; Copyright 2023 By Leon Moore.<br>All Rights Reserved.</p>
     </footer>
     <script src="./index.js"></script>
