finish html and css mobile view

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <i class="fa-solid fa-xmark navIcon" id="x"></i>
             </div>
         </div>
-       <!-- <nav id="nav">
+        <nav id="nav">
             <ul id="navList">
                 <a href="#">
                     <li>Start</li>
@@ -29,14 +29,10 @@
                 </a><a href="#">
                     <li>Latest Projects</li>
                 </a><a href="#">
-                    <li>Contact Me</li>
-                </a><a href="#">
-                    <li>Whatsapp</li>
-                </a><a href="#">
-                    <li>Footer</li>
+                    <li id="noBorder">Contact Me</li>
                 </a>
             </ul>
-        </nav> -->
+        </nav> 
     </header>
     <main>
 
@@ -46,9 +42,6 @@
                 <h1>My name is Leon Moore</h1>
                 <p id="introParagraph">I'm a Frontend Developer based in Germany. Coding is a pleasure for me.<br> 
                     For more info just continue. 😉
-                    <!--I really like to Code interactive and accessible websites 
-                    for my Clients. Here in my Portfolio you can find some recent Projects of mine.
-                    When you got any questions please don't hesitate contacting me! -->
                 </p>
                 <img src="./memojis/memojiLaptop.png" alt="" id="laptopMemoji">
                 <div class="heroIcons" id="heroIconDivHTML">
@@ -68,7 +61,7 @@
             <div class="containerDiv">
                 <h2 id="aboutHeading">About Me</h2>
                 <div class="borderDiv"></div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt minima delectus repellendus enim et similique fuga voluptatem, quibusdam totam eaque eius laboriosam reiciendis est dicta pariatur culpa commodi id doloribus?</p>
+                <p>I'm a 21-year-old Frontend Developer based in Berlin. I really love coding. Specifically, when it takes longer to find the weak point in the code, and you are on the verge of despair, it is best to find the solution. I am pleased that you have landed on my portfolio, please take a look around!</p>
                 <div class="imgCenter">
                     <img src="./memojis/memojiBlink.png" alt="" id="blinkingMemoji">
                 </div>
@@ -85,7 +78,7 @@
                     </div>
                     <h2 class="skillTitle">html</h2>
                     <div class="skillCenterContainer">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima consectetur iste libero nesciunt.</p>
+                        <p>The skeleton of each website in the World Wide Web</p>
                     </div>
                 </div>
                 <div class="skillContainer">
@@ -94,7 +87,7 @@
                     </div>
                     <h2 class="skillTitle">css</h2>
                     <div class="skillCenterContainer">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima consectetur iste libero nesciunt.</p>
+                        <p>What would HTML be without CSS? Boring at best!</p>
                     </div>
                 </div>
                 <div class="skillContainer">
@@ -103,7 +96,7 @@
                     </div>
                     <h2 class="skillTitle">javascript</h2>
                     <div class="skillCenterContainer">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima consectetur iste libero nesciunt.</p>
+                        <p>JavaScript for functionality. We want something to happen when we press a button!</p>
                     </div>
                 </div>
                 <div class="skillContainer">
@@ -112,7 +105,7 @@
                     </div>
                     <h2 class="skillTitle">git</h2>
                     <div class="skillCenterContainer">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima consectetur iste libero nesciunt.</p>
+                        <p>GitHub is an awesome version control tool.<br>You can say Git is the language of GitHub.</p>
                     </div>
                 </div>
                 <div class="skillContainer">
@@ -121,7 +114,7 @@
                     </div>
                     <h2 class="skillTitle">bash</h2>
                     <div class="skillCenterContainer">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima consectetur iste libero nesciunt.</p>
+                        <p>Bash is an incredibly useful language for using the shell!</p>
                     </div>
                 </div>
             </div>
@@ -131,7 +124,7 @@
             <div class="containerDiv">
                 <h2>My Latest Projects</h2>
                 <div class="borderDiv"></div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est esse ex ipsum officia tenetur dolorum sit, enim explicabo modi eveniet.</p>
+                <p>Here you can, for example, call up the code or the live page of my most recent projects. Please don't hesitate to give me constructive feedback. You are also welcome to use the contact form, which you can find below!</p>
 
                 <div id="projectsOnlyDiv">
 
@@ -211,7 +204,6 @@
             <div class="containerDiv">
                 <h2>Contact Me</h2>
                 <div class="borderDiv"></div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse qui quis nam. Quae sed quasi consequuntur debitis, quisquam voluptatem dolores.</p>
                 <form action="https://formspree.io/f/xgebkyrr"
                 method="POST">
                     <label for="name">Name:</label><br>
