finish mobile view html css & js.

--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
         </div>
         <nav id="nav">
             <ul id="navList">
-                <a href="#">
+                <a href="#heroSec">
                     <li>Start</li>
-                </a><a href="#">
+                </a><a href="#aboutMeSec">
                     <li>About Me</li>
-                </a><a href="#">
+                </a><a href="#skillSec">
                     <li>My Skills</li>
-                </a><a href="#">
+                </a><a href="#projectsSec">
                     <li>Latest Projects</li>
-                </a><a href="#">
-                    <li id="noBorder">Contact Me</li>
+                </a><a href="#contactSec">
+                    <li>Contact Me</li>
                 </a>
             </ul>
         </nav> 
@@ -131,17 +131,17 @@
                     <div class="gradientBorderDiv" id="gradientId1">
                         <div class="project" id="project1">
                             <div class="projectTitle imgCenter">
-                                <h3 class="projectHeading">Product Page</h3>
+                                <h3 class="projectHeading">Meeet.</h3>
                                 <div class="coloredSquare"></div>
                             </div>
                             <div class="projectBgImg" id="projectBgImg1">
-                                <a href="#">
+                                <a href="https://github.com/lepamoore/Codewell-Meeet.">
                                     <button class="githubBtn"> 
                                         <i class="devicon-github-original"></i>
                                         <p class="githubBtnText">Get Code</p>
                                     </button>
                                 </a>
-                                <a href="#">
+                                <a href="https://lepamoore.github.io/Codewell-Meeet./">
                                     <button class="liveBtn">
                                         <p class="liveBtnText">Live Page</p>
                                     </button>
@@ -152,17 +152,17 @@
                     <div class="gradientBorderDiv" id="gradientId2">
                     <div class="project" id="project2">
                             <div class="projectTitle imgCenter">
-                                <h3 class="projectHeading">Newsletter Sign-up</h3>
+                                <h3 class="projectHeading">Podcast Sign-up</h3>
                                 <div class="coloredSquare"></div>
                             </div>
                             <div class="projectBgImg" id="projectBgImg2">
-                                <a href="#">
+                                <a href="https://github.com/lepamoore/Frontendmentorio-Project4-Podcast">
                                     <button class="githubBtn"> 
                                         <i class="devicon-github-original"></i>
                                         <p class="githubBtnText">Get Code</p>
                                     </button>
                                 </a>
-                                <a href="#">
+                                <a href="https://lepamoore.github.io/Frontendmentorio-Project4-Podcast/">
                                     <button class="liveBtn">
                                         <p class="liveBtnText">Live Page</p>
                                     </button>
