Convert data for shorter loading time.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio | Leon Moore</title>
+    <link rel="shortcut icon" href="./memojis/memojiGreet.webp" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <script src="https://kit.fontawesome.com/fecf12a8da.js" crossorigin="anonymous"></script>
@@ -12,7 +13,7 @@
 <body>
     <header id="header">
         <div id="navbar">
-            <img src="./memojis/memojiGreet.png" alt="" id="logo">
+            <img src="./memojis/memojiGreet.webp" alt="" id="logo">
             <div id="iconBg">
                 <i class="fa-solid fa-bars navIcon" id="bars"></i>
                 <i class="fa-solid fa-xmark navIcon" id="x"></i>
@@ -43,7 +44,7 @@
                 <p id="introParagraph">I'm a Frontend Developer based in Germany. Coding is a pleasure for me.<br> 
                     For more info just continue. 😉
                 </p>
-                <img src="./memojis/memojiLaptop.png" alt="" id="laptopMemoji">
+                <img src="./memojis/memojiLaptop.webp" alt="" id="laptopMemoji">
                 <div class="heroIcons" id="heroIconDivHTML">
                     <i class="devicon-html5-plain"></i>
                 </div>
@@ -63,7 +64,7 @@
                 <div class="borderDiv"></div>
                 <p>I'm a 21-year-old Frontend Developer based in Berlin. I really love coding. Specifically, when it takes longer to find the weak point in the code, and you are on the verge of despair, it is best to find the solution. I am pleased that you have landed on my portfolio, please take a look around!</p>
                 <div class="imgCenter">
-                    <img src="./memojis/memojiBlink.png" alt="" id="blinkingMemoji">
+                    <img src="./memojis/memojiFinger.webp" alt="" id="blinkingMemoji">
                 </div>
             </div>
         </section>
@@ -225,10 +226,10 @@
     <img src="./waves/wave-5.svg" alt="" id="waves2">
     
     <footer>
-        <img src="./memojis/memojiGreet.png" alt="" id="greetMemoji">
+        <img src="./memojis/memojiCall.webp" alt="" id="greetMemoji">
         <div id="hr"></div>
         <p>&copy; Copyright 2023 By Leon Moore.<br>All Rights Reserved.</p>
     </footer>
-    <script src="./index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
