--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <script src="https://kit.fontawesome.com/fecf12a8da.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body onload="myFunction(x)">
     <header id="header">
         <div id="navbar">
             <img src="./memojis/memojiGreet.webp" alt="" id="logo">
@@ -230,6 +230,6 @@
         <div id="hr"></div>
         <p>&copy; Copyright 2023 By Leon Moore.<br>All Rights Reserved.</p>
     </footer>
-    <script src="index.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
