finish mobile tablet and desktop view.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="./memojis/memojiGreet.webp" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
 </head>
-<body onload="myFunction(x)">
+<body onload="myFunction()">
     <header id="header">
         <div id="navbar">
             <img src="./memojis/memojiGreet.webp" alt="" id="logo">
@@ -16,6 +16,21 @@
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="navIcon" id="bars"><!--! Font Awesome Pro 6.3.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path fill="currentColor" d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/></svg>
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" class="navIcon" id="x"><!--! Font Awesome Pro 6.3.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path fill="currentColor" d="M310.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L160 210.7 54.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L114.7 256 9.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 301.3 265.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L205.3 256 310.6 150.6z"/></svg>
             </div>
+            <nav id="desktopNav">
+                <ul id="desktopNavList">
+                    <div class="navDivs"><a href="#heroScroll">
+                        <li>Start</li>
+                    </div></a><div class="navDivs"><a href="#aboutScroll">
+                        <li>About Me</li>
+                    </a></div><div class="navDivs"><a href="#skillScroll">
+                        <li>My Skills</li>
+                    </a></div><div class="navDivs"><a href="#projectsScroll">
+                        <li>Latest Projects</li>
+                    </a></div><div class="navDivs"><a href="#contactScroll">
+                        <button id="navContactBtn"><li>Contact Me</li></button>
+                    </a></div>
+                </ul>
+            </nav> 
         </div>
         <nav id="nav">
             <ul id="navList">
@@ -74,9 +89,10 @@
                     <img src="./memojis/memojiFinger.webp" alt="" id="blinkingMemoji">
                 </div>
             </div>
+            <span id="skillScroll"></span>
         </section>
 
-        <span id="skillScroll"></span>
+
 
         <section id="skillSec">
             <div class="containerDiv">
@@ -247,7 +263,7 @@
                     <input type="text" name="subject" id="subject" placeholder="Subject" required><br>
                     <label for="message">Your Message:</label><br>
                     <textarea name="message" id="message" cols="40" rows="10" placeholder="Your Message" required></textarea><br>
-                    <input type="submit" value="SUBMIT" id="submit">
+                    <input type="submit" value="SEND MESSAGE" id="submit">
                 </form>
             </div>
         </section>
